examples/negative/type_errors/L4/7_int_in_bool_array.ob
MODULE IntInBoolArray;

VAR MyArray: ARRAY 3 OF BOOLEAN;
    ok: BOOLEAN; (* Ensures errors occur on the correct line *)

BEGIN
  MyArray[0] := 42; ok := TRUE;
END IntInBoolArray.
